[tool.poetry]
name = "sk-chem"
version = "0.1.0"
description = ""
authors = ["Huy Pham <keixi512@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
scikit-learn = "^1.5.1"
rdkit = "^2024.3.3"
mordred = {extras = ["full"], version = "^1.2.0"}
pandas = "^2.2.2"
torch = "^2.3.1"
transformers = "^4.42.4"
cached-path = "^1.6.3"
openbabel-wheel = "^3.1.1.19"
tensorflow = "^2.17.0"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
